--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "unicode-bidi-mirroring"
 version = "0.1.0"
 authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
-description = "Unicode Bidi Mirroring propery detection"
+description = "Unicode Bidi Mirroring property detection"
 documentation = "https://docs.rs/unicode-bidi-mirroring/"
 keywords = ["unicode"]
 license = "MIT/Apache-2.0"
