--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unicode-bidi-mirroring"
-version = "0.1.0"
-authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
+version = "0.2.0"
+authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
 description = "Unicode Bidi Mirroring property detection"
 documentation = "https://docs.rs/unicode-bidi-mirroring/"
 keywords = ["unicode"]
